[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://environments/Title Screen.gd" type="Script" id=2]

[node name="Title Screen" type="Node2D"]
script = ExtResource( 2 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 66.0
margin_top = 489.0
margin_right = 106.0
margin_bottom = 529.0
texture_normal = ExtResource( 1 )

[node name="Settings" type="TextureButton" parent="."]
margin_left = 478.0
margin_top = 484.0
margin_right = 518.0
margin_bottom = 524.0
texture_normal = ExtResource( 1 )

[node name="Settings Envi" type="Control" parent="Settings"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -476.0
margin_top = -482.0
margin_right = -436.0
margin_bottom = -442.0

[node name="Back" type="TextureButton" parent="Settings/Settings Envi"]
margin_left = 595.0
margin_top = 483.0
margin_right = 659.0
margin_bottom = 547.0
disabled = true
texture_normal = ExtResource( 1 )

[node name="Quit" type="TextureButton" parent="."]
margin_left = 920.0
margin_top = 509.0
margin_right = 984.0
margin_bottom = 573.0
texture_normal = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]

[connection signal="button_up" from="Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="Settings/Settings Envi/Back" to="." method="_on_Back_button_up"]
[connection signal="button_up" from="Quit" to="." method="_on_Quit_button_up"]
